syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
//Unary
message Greeting {
    string first_name =1;
    string last_name =2;
}

message GreetRequest{
    Greeting greeting =1;
}

//Server streaming
message GreetResponse{
    string result=1;
}
message GreetManyTimesRequest{
    Greeting greeting =1;
}

message GreetManyTimesResponse{
    string result=1;
}
//Client Streaming
message LongGreetRequest{
    Greeting greeting =1;
}
message LongGreetResponse{
    string result=1;
}
//BIDI Streaming
message GreetEveryoneRequest {
    Greeting greeting =1;
}
message GreetEveryoneResponse{
    string result=1;
}




service GreetService{
    //Unary
    rpc Greet(GreetRequest) returns (GreetResponse){};

    //Server streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    //Client Streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};

    //BIDI Straming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){};

}